# macro-data-ingest

./: .env.template  .gitignore  Makefile  README.md  TODO.txt  pyproject.toml
.agent/: AGENTS.md  PLANS.md  PR_TEMPLATE.md  SPEC.md
.agent/features/2026-03-04-backfill-runbook-function-name/: SPEC.md
.codex/: config.toml
.cursor/plans/: census-state-population-integration_14a0b642.plan.md  codebase-cleanup-refactor_5c2ab71d.plan.md  federal-receipts-ratios_db805287.plan.md  pce_weighted_rpp_research_f0b319f8.plan.md  postgres-serving-simplification_cda2fa93.plan.md  weighted-rpp-view_9c26b72f.plan.md  weighted_rpp_update_113f5874.plan.md
.github/workflows/: ci.yml  ingest.yml
config/: datasets.example.yaml  datasets.yaml
docs/: architecture.md  backfills.md  datasets.md  operability.md  roadmap.md  setup.md  spec.md
research/prompts/: pce-weighted-rpp-state-level.md
scripts/: __init__.py  backfill_function_names.py  generate_pce_weighted_rpp_state_level.py  provision_aws.py
src/macro_data_ingest/: __init__.py  cli.py  config.py  datasets.py  logging_utils.py  run_metadata.py  s3_utils.py
tests/: test_backfill_function_names.py  test_bea_client.py  test_census_client.py  test_census_gold_transform.py  test_census_silver_transform.py  test_cli.py  test_config.py  test_datasets.py  test_gold_transform.py  test_ingest_pipeline.py  test_load_pipeline.py  test_postgres_loader.py  test_provision_plan.py  test_series_labels.py  test_serving_views.py  test_silver_transform.py  test_smoke.py  test_weighted_rpp_state_level.py
(+29 files in other folders)
